# python-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  check_db.py  docker-compose.yml  ingest_pdf.py  main.py  medical_chat_history.db  pyproject.toml  run.ps1  test_interrupt.py  test_modern_interrupt.py
.deepeval/: .deepeval_telemetry.txt
.github/: copilot-instructions.md
app/api/: api_router.py  chat_router.py  test_router.py
app/core/: config.py  prompts.yaml  security.py
app/services/: agent_service.py  azure_rag_service.py  base.py  financial_service.py  medical_demo_service.py  medical_service.py
app/services/medical/: service.py  state.py
app/services/medical/nodes/: analyst.py  expert.py  router.py
app/services/providers/: __init__.py  base.py  google.py
app/services/tools/: financial_tools.py  medical_tools.py  system_tools.py
app/utils/: logger.py  prompt_manager.py  registry_loader.py
scripts/: ingest_pdf.py
skills/: health_analyst.md  medical_expert.md  registry.json
skills/device_expert/: SKILL.md
skills/financial_expert/: SKILL.md
skills/health_analyst/: SKILL.md
static/: chat.html  deep.html  demo.html  index.html
static/css/: chat.css  deep.css  demo.css  index.css
static/js/: chat.js  deep.js  demo.js  test_logic.js
tests/integration/: test_cases.yaml  test_integration.py  test_integration_eval.py
tests/unit/: test_expert_nodes.py  test_financial_service.py  test_medical_demo_service.py  test_nodes.py  test_utils.py
