[project]
name = "python-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext>=0.7.5",
    "azure-search-documents>=11.6.0",
    "deepagents>=0.3.11",
    "duckduckgo-search>=6.0.0",
    "fastapi[standard]>=0.128.0",
    "ipython>=8.38.0",
    "langchain>=1.2.1",
    "langchain-aws>=1.2.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "yfinance>=1.1.0",
]
